--- a/Site/public/css/style.css
+++ b/Site/public/css/style.css
@@ -74,8 +74,8 @@ body{
 /* parte de publicações */
 
 .dash-right{
-    width: 80%;
-    background-color: white;
+    width: 90%;
+    background-image: url(..//Imagens/estrelas.gif);
     margin: auto;
     margin-top: 260px;
     padding: 3%;
@@ -89,6 +89,7 @@ body{
     font-family: 'Exo 2', sans-serif;
     background-color: #dcdcdc;
     border-radius: 10px;
+    opacity: 0.4;
 }
 
 .dash-right .avisos .container {
@@ -193,10 +194,11 @@ body{
 
 .acessorapido{
     width: 30%;
-    height: 500px;
+    height: 600px;
     background-color: #dcdcdc;
     margin-left: 5%;
     border-radius: 10px;
+    opacity: 0.4;
 }
 
 .acessorapido h3{
@@ -217,6 +219,41 @@ body{
     font-size: 18px;
     font-weight: bolder;
 }
+
+/* Placar Casas */
+
+.acessorapido h4{
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 25px;
+    font-size: 22px;
+}
+.placar{
+    width: 80%;
+    height: 100px;
+    background-color: white;
+    margin: auto;
+    display: flex;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.placar .casa{
+    width: 50%;
+    height: 100%;
+}
+
+.placar .casa h5{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 18px;
+}
+
+.placar .borda{
+    border-left: #dcdcdc 2px solid;
+}
+
+
 
 /* footer */
 
