--- a/Site/public/css/style.css
+++ b/Site/public/css/style.css
@@ -75,7 +75,7 @@ body{
 
 .dash-right{
     width: 90%;
-    background-image: url(..//Imagens/estrelas.gif);
+    /* background-image: url(..//Imagens/estrelas.gif); */
     margin: auto;
     margin-top: 260px;
     padding: 3%;
@@ -90,6 +90,16 @@ body{
     background-color: #dcdcdc;
     border-radius: 10px;
     opacity: 0.4;
+    transition: .5s;
+}
+
+.dash-right .avisos:hover {
+    width: 70%;
+    color: black;
+    font-family: 'Exo 2', sans-serif;
+    background-color: #dcdcdc;
+    border-radius: 10px;
+    opacity: 1;
 }
 
 .dash-right .avisos .container {
@@ -199,6 +209,16 @@ body{
     margin-left: 5%;
     border-radius: 10px;
     opacity: 0.4;
+    transition: .5s;
+}
+
+.acessorapido:hover{
+    width: 30%;
+    height: 600px;
+    background-color: #dcdcdc;
+    margin-left: 5%;
+    border-radius: 10px;
+    opacity: 1;
 }
 
 .acessorapido h3{
